ghc-4335c07/testsuite/tests/indexed-types/should_compile/Simple3.hs
{-# LANGUAGE TypeFamilies, MultiParamTypeClasses, FlexibleInstances #-}

module ShouldCompile where

class C7 a b where
  data S7 b :: *

instance C7 Char (a, Bool) where
  data S7 (a, Bool) = S7_1
