ghc-4335c07/testsuite/tests/indexed-types/should_fail/OverIndirectThisModA.hs
{-# LANGUAGE TypeFamilies #-}

module OverIndirectThisModA (C, D)
where

data family C a b :: *

type family D a b :: *
